--- a/index.html
+++ b/index.html
@@ -1,19 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width">
+        <meta name="description" content="Test your wine education knowledge">
         <title>Quiz App-Wine Edu Questions</title>
         <link type= "text/css" href="main.css" rel="stylesheet">
         <script src="https://kit.fontawesome.com/edb3e54f58.js"></script>
-
+        <link href="https://fonts.googleapis.com/css?family=DM+Serif+Display|Playfair+Display&display=swap" rel="stylesheet">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+        <script src="datastore.js"></script>
+        <script src="index.js"></script>
     </head>
     <body>
-        <heading>
+        <heading role="banner">
             <h1>Wine Education Quiz</h1>
             <i class="fas fa-wine-glass-alt"></i>
             <section class="score">
                   <ul>
                       <li>Question: <span class="questionNumber">0</span>/10</li>
-                      <li>Score: <span class="score">0</span></li>
+                      <li>Score: <span class="score"> 0</span></li>
                   </ul>
             </section>
         </heading>
@@ -25,6 +31,7 @@
                     <label for="wine-quiz"></label>
                     <button type="button" class="startButton"><h3>Start Here</h3></button>
             </form>
+            <div class="questionAnswerForm"></div>
         </main>
     </body>
 </html>
