updating index file

--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
                     <button type="button" class="startButton"><h3>Start Here</h3></button>
             </form>
             <div class="questionAnswerForm"></div>
+
+            <a href="feedback.html">Feedback Page Link</a>
+            <a href="RestartPage.html">Resart Quiz page</a>
+            <a href="Question.html">Question Page</a>
         </main>
     </body>
 </html>
