--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
         <heading role="banner">
             <h1>Wine Education Quiz</h1>
             <i class="fas fa-wine-glass-alt"></i>
-            <section class="score">
+            <section class="scoreSection">
                   <ul>
                       <li>Question: <span class="questionNumber">0</span>/10</li>
-                      <li>Score: <span class="score"> 0</span></li>
+                      <li class="second-line">Score: <span class="score">  0</span></li>
                   </ul>
             </section>
         </heading>
@@ -32,10 +32,6 @@
                     <button type="button" class="startButton"><h3>Start Here</h3></button>
             </form>
             <div class="questionAnswerForm"></div>
-
-            <a href="feedback.html">Feedback Page Link</a>
-            <a href="RestartPage.html">Resart Quiz page</a>
-            <a href="Question.html">Question Page</a>
         </main>
     </body>
 </html>
