--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <i class="fas fa-wine-glass-alt"></i>
             <section class="scoreSection">
                   <ul>
-                      <li>Question: <span class="questionNumber">0</span>/10</li>
+                      <li class="first-line">Question: <span class="questionNumber">0</span>/10</li>
                       <li class="second-line">Score: <span class="score">  0</span></li>
                   </ul>
             </section>
