fixed button alignment

--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
         </heading>
         <main>
             <section class="intro">
-                <p><h2>Are you a wine newbie or sommelier? Click start here to test your wine education knowledge.</h2></p>
+                <p><h2>Are you a wine newbie or sommelier?</h2></p> 
+                <p><h2>Start here to test your wine education knowledge.</h2></p>
             </section>
             <form id="js-wine-form">
                     <label for="wine-quiz"></label>
