Adds favicon, updates style per mentor feedback

--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         <script src="datastore.js"></script>
         <script src="index.js"></script>
+        <link rel='icon' href='wine-icon.png' type='image/x-icon'/>
     </head>
     <body>
         <heading class= "banner" role="banner">
-            <h1><i class="fas fa-wine-glass-alt"></i>  Wine Education Quiz</h1>
-            
+            <h1 class="title"> Wine Education Quiz</h1>
             <section class="scoreSection">
-                  <ul>
-                      <li class="questionNumber"> 10 Questions</li>
-                      <li class="score"> Score: 0</li>
-                  </ul>
-            </section>
+                <ul class='scoreList'>
+                    <li class="questionNumber"> 10 Questions</li>
+                    <li class="score"> Score: 0</li>
+                </ul>
+          </section>
         </heading>
         <main>
             <section class="intro">
@@ -30,7 +30,7 @@
             </section>
             <form id="js-wine-form">
                     <label for="wine-quiz"></label>
-                    <button type="button" class="startButton"><h3>Start Here</h3></button>
+                    <button type="button" class="startButton"><h3>Start</h3></button>
             </form>
             <form class="questionAnswerForm">
                 <legend>Questions</legend>
