--- a/Question.html
+++ b/Question.html
@@ -13,17 +13,9 @@
         <script src="index.js"></script> -->
     </head>
     <body>
-        <heading role="banner">
-            <h1>Wine Education Quiz</h1>
-            <i class="fas fa-wine-glass-alt"></i>
-            <section class="score">
-                  <ul>
-                      <li>Question: <span class="questionNumber">1</span>/10</li>
-                      <li>Score: <span class="score"> 0</span></li>
-                  </ul>
-            </section>
-        </heading>
+
         <main>
+
             <section class="Question">
                 <p><h2>1. Which wine usually pairs best with seafood?</h2></p>
                 <ol class="answers">
@@ -35,7 +27,7 @@
             </section>
             <form id="js-wine-form">
                     <label for="wine-quiz"></label>
-                    <button type="button" class="startButton"><h3>Submit</h3></button>
+                    <button type="button" class="submitButton"><h3>Submit</h3></button>
                     
             </form>
             <div class="questionAnswerForm"></div>
