Adds bottom banner

--- a/index.html
+++ b/index.html
@@ -14,16 +14,19 @@
         <link rel='icon' href='wine-icon.png' type='image/x-icon'/>
     </head>
     <body>
-        <heading class= "banner" role="banner">
+        <heading class="banner" role="banner">
             <h1 class="title"> Wine Education Quiz</h1>
             <section class="scoreSection">
                 <ul class='scoreList'>
                     <li class="questionNumber"> 10 Questions</li>
                     <li class="score"> Score: 0</li>
                 </ul>
-          </section>
+        </section>
+     
         </heading>
         <main>
+            <img class="banner-image" src='berries-blur-blurry-39351.jpg' alt='winery'/>
+            <span class='main-quiz'>
             <section class="intro">
                 <p><h2>Are you a wine newbie or sommelier?</h2></p> 
                 <p><h2>Click here to test your wine education knowledge.</h2></p>
@@ -35,6 +38,13 @@
             <form class="questionAnswerForm">
                 <legend>Questions</legend>
             </form>
+        </span>
+        <span class='bottom-banner'>
+        <img class='image-bottom' src='My Post (2).png' alt='wineries'/>
+        <p class="wine-quotes">"The discovery of a wine is of greater moment than 
+            the discovery of a constellation. The universe is too full of stars.”― 
+            Benjamin Franklin, circa 1700s</p>
+        </span>
         </main>
     </body>
 </html>
