Adds new background image

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
      
         </heading>
         <main>
-            <img class="banner-image" src='berries-blur-blurry-39351.jpg' alt='winery'/>
+            <img class="banner-image" src='vineyard.jpg' alt='winery'/>
             <span class='main-quiz'>
             <section class="intro">
                 <p><h2>Are you a wine newbie or sommelier?</h2></p> 
